# donix

./: CMakeLists.txt  README.md
include/: mcpClient.hpp  mcpServer.hpp
scripts/: buildNrun.sh  installDeps.sh  run-llama.sh
src/: main.cpp  mcpClient.cpp  mcpServer.cpp
